--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-library",
+  "name": "test-mega-library",
   "version": "1.0.0",
-  "description": "test library",
+  "description": "test mega library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
