--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test",
     "library"
   ],
-  "author": "Antonio Vida <antoniovlx@gmail.com> (https://www.antoniovida.xyz)",
+  "author": "Antonio Vida <antoniovlx@gmail.com> (https://www.antoniovida.es)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/antoniovlx/test-library/issues"
